# explorepy

./: .bumpversion.cfg  .cookiecutterrc  .coveragerc  .gitignore  .readthedocs.yaml  .travis.yml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  Jenkinsfile  LICENSE  MANIFEST.in  README.md  README.rst  bt_connection.py  demofile_eeg.csv  demofile_orn.csv  experiment2.py  pyproject.toml  setup.cfg  setup.py  telemetry_test.py  test.py  tox.ini
.github/workflows/: env_test.yml  linting.yml  testing.yml
ci/templates/: .travis.yml
dockerfiles/: DockerfileLinux
docs/: conf.py  explore_legacy_devices.rst  index.rst  installation.rst  requirements.txt  usage.rst
docs/reference/: explorepy.rst  index.rst
examples/: acquisition-example.py  band_power_plot.py  eeg2lamp.py  eeg2penplotter.py  live_exg_imp_recording.py  lsl_example.py  lsl_multiple_streams_visualisation.py  marker_example.py  mne_raw_format_from_csv.py  real_time_spectrogram.py  receive_external_marker.py  wiki-ecg-analysis.py  wiki-sleep-analysis.py
examples/eeg2lamp/: eeg2lamp.py
examples/eegsynth_demo/: MentalabEEGSynth.vcv  buffer.ini  historycontrol.ini  outputmidi_loopback.ini  outputmidi_loopback_2.ini  postprocessing.ini  preprocessing.ini  push2lsl.py  spectral.ini
examples/fieldtrip_loader/: README.md  fieldtrip_loader.m
examples/markers_examples/: send_8_bit_marker_during_connection_example.py  send_8_bit_marker_independently.py
examples/mne_loader/: integrations-mne-loader.py
examples/motor-imagery-bci/: README.md  main.py
examples/p300_demo/: README.md  analysis_csv.py  analysis_csv_4_channel.py  analysis_csv_8_channel.py  experiment.py  oddball_demo_vid_Marker.csv  oddball_demo_vid_Meta.csv  oddball_demo_vid_ORN.csv
examples/sleep_activity_analysis/: sleep_pipeline_documentation.md  visualize.py
examples/ssvep_demo/: README.md  analysis.py  main.py  offline_analysis.py  offline_experiment.py  online_ssvep.py  ssvep.py
examples/vr_demo/: README.md  lsl-listen-simpleCollisionEvent.py  lsl-scan.py  lsl-stream-simpleInlentExample.py
installer/windows/: README.md  installer.cfg
lib/: BTSerialPortBinding.cpp  BTSerialPortBinding.h  BluetoothHelpers.cpp  explorepy-1.0.0-py2.py3-none-any.whl  exploresdk.py  swig_command__devenv.txt  swig_interface_wrap.cxx
lib/linux/: BTSerialPortBinding.cpp  BTSerialPortBinding.h  DeviceINQ.cpp  ExploreException.h  exploresdk.py  exploresearch.i  serialport.i  swig_interface.i  swig_interface_wrap.cxx
lib/mac/: BTSerialPortBinding.h  BTSerialPortBinding.mm  BluetoothDeviceResources.h  BluetoothDeviceResources.mm  BluetoothWorker.h  BluetoothWorker.mm  DeviceINQ.m  DeviceINQ.mm  ExploreException.h  ExploreExceptionConstants.h  ExploreSDK.h  btScan  create_shared_lib.sh  exploresdk.py  exploresearch.i  json.hpp  serialport.i  swig_interface.i  swig_interface_wrap.cxx
lib/mac_new/: BTSerialPortBinding.mm
lib/windows/: BTSerialPortBinding.cpp  BTSerialPortBinding.h  DeviceINQ.cpp  (+18 more)
licences/: license_pybluez.txt
licenses/: LICENSE_explorepy.txt  LICENSE_mne.txt  LICENSE_pybluez.txt  LICENSE_sentry_sdk.txt
tests/: README.md  conftest.py  integration_test_ble.py  test_command.py  test_explorepy.py  test_filters.py  test_packet.py  test_parser.py  test_settings_manager.py  test_tools.py
(+73 files in other folders)
