[build-system]
requires        = ['setuptools>=74.0']
build-backend   = 'setuptools.build_meta'

[project]
name    = 'explorepy'
version = "4.0.0"
license = { text = "MIT" }
readme = { file = "README.rst", content-type = "text/markdown" }
authors = [
  { name = "MentaLab Hub", email = "support@mentab.org" },
]
urls = { Homepage = "https://github.com/Mentalab-hub/explorepy" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

dependencies = [
    'numpy',
    'scipy',
    'pyEDFlib==0.1.38',
    'click==7.1.2',
    'appdirs==1.4.3',
    'sentry_sdk==2.8.0',
    'mne',
    'eeglabio',
    'pandas',
    'pyserial',
    'pyyaml',
    'bleak==0.22.3',
    'pylsl',
    'numba']

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
test = [
    "pytest==6.2.5",
    "pytest-mock==3.10.0",
    "pytest-html==3.2.0",
    "flake8==4.0.1",
    "isort==5.10.1"]

[project.scripts]
explorepy = "explorepy.cli:cli"
